unpackaged/main/default/objects/ProductMatrix__c/ProductMatrix__c.object-meta.xml
<CustomObject>
    <description>Product matrix - controls products that can be added to an opportunity record</description>
    <label>Product Matrix</label>
    <nameField>
        <displayFormat>PRODUCT-{0000000000}</displayFormat>
        <label>Product Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>