unpackaged/main/default/objects/ProductMatrix__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify if the product is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>