unpackaged/main/default/objects/ProductMatrix__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <description>Category 1 of the product matrix - required field</description>
    <label>Category 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>