unpackaged/main/default/objects/ProductMatrix__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <description>Category 2 of the product matrix - required</description>
    <label>Category 2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>