unpackaged/main/default/objects/ProductMatrix__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <description>Colour of the product - not required</description>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>