unpackaged/main/default/objects/ProductMatrix__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Manufacturer of the product - not required</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>