unpackaged/main/default/objects/ProductMatrix__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <description>Memory of the product - not required</description>
    <label>Memory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>