unpackaged/main/default/objects/ProductMatrix__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product in the product matrix - required field</description>
    <label>Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>