unpackaged/main/default/objects/ProductMatrix__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Type of product</description>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Subscription</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>