unpackaged/main/default/objects/ProductMatrix__c/fields/RRP__c.field-meta.xml
<CustomField>
    <fullName>RRP__c</fullName>
    <description>Recommended retail price for the product, can be overridden when a product is added to an opportunity. Not required field.</description>
    <label>RRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>