unpackaged/main/default/objects/ProductMatrix__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <description>Tariff associated with the product (if any) - not required</description>
    <label>Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>