unpackaged/main/default/objects/ProductMatrix__c/fields/ZoeyTariffID__c.field-meta.xml
<CustomField>
    <fullName>ZoeyTariffID__c</fullName>
    <description>Tariff ID from Zoey platform that is associated with the product  (if any) - not required</description>
    <externalId>true</externalId>
    <label>Zoey Tariff ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>