unpackaged/main/default/objects/ProductMatrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category1__c</columns>
    <columns>Category2__c</columns>
    <columns>Category3__c</columns>
    <columns>Product__c</columns>
    <columns>Tariff__c</columns>
    <columns>ZoeyTariffID__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>